<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/post_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="80dp"
        android:padding="15dp">
        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/prof_pic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/profile_pic" />

        <LinearLayout
            android:id="@+id/profile_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@id/profile_pic">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/group_name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/time_counter"
                android:textColor="#4D000000" />
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:foregroundGravity="center"
            android:src="@drawable/more_tools"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/more_tools" />

    </RelativeLayout>
    <TextView
        android:id="@+id/post_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_caption"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/post_info"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        />
    <ImageView
        android:id="@+id/post_pic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/post_pic"
        app:layout_constraintTop_toBottomOf="@id/post_caption"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:adjustViewBounds="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/post_pic"
        />
    <RelativeLayout
        android:id="@+id/retch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/post_pic"
        android:padding="10dp">
        <LinearLayout
            android:id="@+id/reacts_cec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_like"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:contentDescription="@string/like_logo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/likes_counter"
                android:textColor="@color/grey"
                android:fontFamily="sans-serif-black"
                android:textSize="13sp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/comment_cec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments_counter"
            android:textColor="@color/grey"
            android:fontFamily="sans-serif-black"
            android:layout_toStartOf="@id/share_cec"
            android:layout_marginEnd="10dp"
            />
        <TextView
            android:id="@+id/share_cec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_counter"
            android:textColor="@color/grey"
            android:fontFamily="sans-serif-black"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>

    <ImageView
        android:id="@+id/break1"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="#e4e4e4"
        app:layout_constraintTop_toBottomOf="@id/retch"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/breakline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/break1"
        android:baselineAligned="false">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/like_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/like_button"
                android:background="#0000"
                android:contentDescription="@string/likebutton" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/comment_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/comment_button"
                android:background="#0000"
                android:contentDescription="@string/commentbutton"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share_button"
                android:background="#0000"
                android:contentDescription="@string/sharebutton"
                />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>