<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_screen"
    android:padding="30dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/facebook_logo"
        android:contentDescription="@string/applogo"
        android:layout_marginTop="75dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="#F0F0F0">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/usernameBox"
            android:background="@color/white"
            android:hint="@string/username_login_hint"
            android:autofillHints="username"
            android:layout_marginBottom="1dp"
            android:paddingHorizontal="20dp"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/passwordBox"
            android:background="@color/white"
            android:hint="@string/password_login_hint"
            android:autofillHints="username"
            android:paddingHorizontal="20dp"
            android:password="true"
            android:inputType="textPassword"
            />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#4f69a2"
        android:text="@string/login"
        android:textColor="@color/white"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up"
        android:background="#0000"
        android:text="@string/sing_up_for_facebook"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/help_center"
        android:background="#0000"
        android:text="@string/help_center"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_gravity="center"
        />

</LinearLayout>