<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_screen"
    android:padding="20dp">

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/facebook"
        android:textColor="@color/white"
        android:textSize="70sp"
        android:gravity="center"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/usernameBox"
        android:background="@color/white"
        android:hint="@string/username_login_hint"
        android:autofillHints="username"
        android:paddingStart="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/passwordBox"
        android:background="@color/white"
        android:hint="@string/password_login_hint"
        android:autofillHints="username"
        android:paddingStart="20dp"
        android:password="true"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#4f69a2"
        android:text="@string/login"
        android:textColor="@color/white"
        />

</LinearLayout>